# Content-Marketing-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  START_HERE.md  pyproject.toml
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CURRENT_STATE.md  FOLDER_STRUCTURE.md  INTEGRATIONS.md  PROJECT_PLAN.md  UBIQUITOUS_LANGUAGE.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: review-flow.spec.ts  review-gate-failure.spec.ts  telemetry-filters.spec.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  routes.tsx
frontend/src/components/: DashboardLayout.tsx
frontend/src/hooks/: useAsyncData.ts
frontend/src/pages/: CalendarPage.tsx  (+5 more)
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  run_ast_extract.py
src/content_marketing_agent/: __init__.py  __main__.py  api.py  cli.py  main.py
tests/: test_api_analytics.py  test_api_client_campaign.py  test_api_connector_diagnostics.py  test_api_content_items.py  test_api_demo_runbook.py  test_api_health_llm.py  test_api_integration_smoke.py  test_api_monthly_flow.py  test_api_monthly_plan.py  test_api_produce_content.py  test_api_publication.py  test_api_run_telemetry.py  test_api_run_telemetry_filters.py  test_approval_gate.py  test_connector_registry.py  test_ga4_connector.py  test_hubspot_connector.py  test_linkedin_connector.py  test_monthly_flow_orchestration.py  test_wordpress_connector.py
(+60 files in other folders)
