[project]
name = "content-marketing-agent"
version = "0.1.0"
description = "CrewAI Content Marketing Agent Team with Gemini API and hybrid platform connectors."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "alembic>=1.13.0",
  "crewai>=0.100.0",
  "crewai-tools>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "sqlmodel>=0.0.22",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
integrations = [
  "google-analytics-data>=0.18.0"
]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.5.0"
]

[project.scripts]
cma = "content_marketing_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
packages = ["content_marketing_agent"]

[tool.hatch.build.targets.wheel]
packages = ["src/content_marketing_agent"]
